# ChangeLog for x11-wm/windowmaker
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/windowmaker/ChangeLog,v 1.78 2007/03/20 04:10:31 mr_bones_ Exp $

  20 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
  -files/0.80.2/wlist.patch,
  -files/0.80.2/windowmaker-0.80.2-r1-gentoo.patch,
  -files/0.80.2/gtk2flickerfix.patch, -files/0.80.2/wmfpo.patch,
  -files/0.80.2/trance.patch.WM-0.80.2.diff,
  -files/0.80.2/xinerama.patch.bz2, -windowmaker-0.80.2-r4.ebuild:
  remove old crufty version

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  04 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  windowmaker-0.92.0-r3.ebuild:
  Get rid of comment that triggers as false positive.

  26 Dec 2006; Tom Gall <tgall@gentoo.org>
  windowmaker-0.92.0-r3.ebuild:
  stable on ppc64

  20 Aug 2006; Luis Medinas <metalgod@gentoo.org>
  windowmaker-0.92.0-r3.ebuild:
  Added ~ppc64 keyword requested by Kugelfang.

  18 Aug 2006; Luis Medinas <metalgod@gentoo.org>
  windowmaker-0.92.0-r3.ebuild:
  Stable on mips. Bug #130839.

  24 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  windowmaker-0.92.0-r3.ebuild:
  Stable on sparc wrt #130839

  23 Apr 2006; Thomas Cort <tcort@gentoo.org> windowmaker-0.92.0-r3.ebuild:
  Stable on alpha wrt Bug #130839.

  22 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  windowmaker-0.92.0-r3.ebuild:
  ppc stable, bug #130839

  22 Apr 2006; Luis Medinas <metalgod@gentoo.org>
  windowmaker-0.92.0-r3.ebuild:
  Stable on amd64. Bug #130839.

  22 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  windowmaker-0.92.0-r3.ebuild:
  Stable on x86 wrt bug #130839.

  06 Apr 2006; Luis Medinas <metalgod@gentoo.org>
  windowmaker-0.80.2-r2.ebuild, windowmaker-0.80.2-r4.ebuild,
  windowmaker-0.91.0-r1.ebuild, windowmaker-0.92.0-r1.ebuild,
  windowmaker-0.92.0-r2.ebuild, windowmaker-0.92.0-r3.ebuild: