@@ -24,14 +24,14 @@ RMD160 501ba6451f7e756cc3d07682d728bcd6fe55366d files/wmaker.desktop 221
 SHA256 40359d3c61117f0dbc5eb547e4c369982427e8bc3174c95002d34eb30f9a4a84 files/wmaker.desktop 221
 DIST WindowMaker-0.92.0.tar.gz 2758524 RMD160 b8bebed6a34696625ae0ae7c0ebcfdfc0ba09cdd SHA1 6f545356acde7e9bf4c11345ac1359b451a9d1bc SHA256 9edaa8d9ee6e6beb06f4c391c0aec5cd0e5b5494456cae2cdcfd49656177afc6
 DIST WindowMaker-extra-0.1.tar.gz 238018 RMD160 94334c2c12d20a8fd0cd2a70e54cd3689f043038 SHA1 80f34cb3af705ec0f79d727b82cef28ee50fc4e7 SHA256 acd6e1fb790485b107daf2b710da372367b41383c55d9c8bdfdac521d850edc4
-EBUILD windowmaker-0.92.0-r3.ebuild 5260 RMD160 c1987dcb66b786421abb434e2405da458fbb5bf7 SHA1 109db79486c37f87b809442987c42cc7f96d2660 SHA256 edf7943538b3d99dccac64ae89b27550cd22dac0e8f41a49a9da4e96833c1404
-MD5 97ee115506d835ad757e46305c6cb976 windowmaker-0.92.0-r3.ebuild 5260
-RMD160 c1987dcb66b786421abb434e2405da458fbb5bf7 windowmaker-0.92.0-r3.ebuild 5260
-SHA256 edf7943538b3d99dccac64ae89b27550cd22dac0e8f41a49a9da4e96833c1404 windowmaker-0.92.0-r3.ebuild 5260
-MISC ChangeLog 18107 RMD160 75f0e18b596a5aeff5e55e82136279fb552bdc25 SHA1 f18274c0975b36ee1e3db3155fe8abc244530452 SHA256 aa441b03741df382778e5747fd2a7973319bb40d94a043ec9987be3f1044c102
-MD5 7e3958a890ac55e177c6db29776776e9 ChangeLog 18107
-RMD160 75f0e18b596a5aeff5e55e82136279fb552bdc25 ChangeLog 18107
-SHA256 aa441b03741df382778e5747fd2a7973319bb40d94a043ec9987be3f1044c102 ChangeLog 18107
+EBUILD windowmaker-0.92.0-r3.ebuild 5272 RMD160 c049a1e5af849b6e2f04e0249fb2d741133eeb32 SHA1 3e4202e8c33e20f33358088a91986ab8c2ac6366 SHA256 5ef4f42df981dba58db3ce79f96c80a5f4b31268dfd27ddd908a7dd3d1dd6208
+MD5 892ae3ab4154a83e3f49cfbbfc491512 windowmaker-0.92.0-r3.ebuild 5272
+RMD160 c049a1e5af849b6e2f04e0249fb2d741133eeb32 windowmaker-0.92.0-r3.ebuild 5272
+SHA256 5ef4f42df981dba58db3ce79f96c80a5f4b31268dfd27ddd908a7dd3d1dd6208 windowmaker-0.92.0-r3.ebuild 5272
+MISC ChangeLog 18295 RMD160 d711ef908041e8f7dc40c9616ec41421fcaa9c33 SHA1 09c1ddd7aabca1cc2dcfe0598558832df21d743e SHA256 ca7e1e11d6fcc9636aa81bd5cd2e58cc504c9bdf8f9f54ba68294d64d8c9029a
+MD5 339fd221870ce72088f3183e35b00f28 ChangeLog 18295
+RMD160 d711ef908041e8f7dc40c9616ec41421fcaa9c33 ChangeLog 18295
+SHA256 ca7e1e11d6fcc9636aa81bd5cd2e58cc504c9bdf8f9f54ba68294d64d8c9029a ChangeLog 18295
 MISC metadata.xml 160 RMD160 ddb4d678bca64884df87cfab19e00ed9b1ff68a7 SHA1 b3d2981594e6dc70e8f74882cb08b541e1031987 SHA256 264f651f5dc3c8c2d37605e94abe49e6b29b7aed9131e82b473f27e12d67ebe7
 MD5 72c8d22e50caaf5dd42b1823f5874206 metadata.xml 160
 RMD160 ddb4d678bca64884df87cfab19e00ed9b1ff68a7 metadata.xml 160
